# indicator-intelligence

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  USAGE_POLICY.md  VERSION  imgtest.png:Zone.Identifier  indicator.py  output.json  pyproject.toml  requirement.txt  requirements.txt  setup.py  test.json  test.py
.github/: FUNDING.yml  SECURITY_POLICY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yaml
indicator/: ConnectionTest.py  V1DomainFinder.py  V1EmailFinder.py  V1StaticfileDownloader.py  V1StaticfileFinder.py  __init__.py  functions.py  hashCalculater.py  indicator.py  indicator_docker.py  log.py  searchSourceCode.py  test.py
