[tool.poetry]
name = "indicator"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "indicator"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "4.11.2"
certifi = "2022.12.7"
charset-normalizer = "3.0.1"
filelock = "3.9.0"
idna = "3.4"
platformdirs = "3.0.0"
requests = "2.28.2"
soupsieve = "2.4"
uritools = "4.0.1"
urlextract = "1.8.0"
urllib3 = "1.26.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
